--- a/player.html
+++ b/player.html
@@ -28,8 +28,14 @@
             <button>BUY NOW</button>
         </div>
     </div>    
+
     </div>
 
     </header>
+    <main>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
