--- a/player.html
+++ b/player.html
@@ -34,7 +34,12 @@
     </header>
     <main>
         <section>
-            
+            <h1>Our Latest colour collection 2021</h1>
+            <div class="section-box">
+                <img src="./section img/Rectangle 74.svg" alt="rasm">
+                <img src="./section img/Rectangle 76.svg" alt="rasm">
+                <img src="./section img/Rectangle 75.svg" alt="rasm">
+            </div>
         </section>
     </main>
 </body>
